--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,8 +1,16 @@
+@font-face {
+  font-family: "comicsans";
+  src: url("./assets/Ldfcomicsans-jj7l.ttf")format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   /* border-style: solid; */
   /* border-radius: 1px; */
 }
