--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -21,3 +21,17 @@
 .navline {
   margin-bottom: 10%;
 }
+
+@media (max-width:850px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
+  }
+
+  .links li {
+    margin: 0;
+  }
+}
