--- a/src/pages/Content.module.css
+++ b/src/pages/Content.module.css
@@ -1,5 +1,5 @@
 .content>* {
-  margin-bottom: 3%;
+  margin-bottom: 5%;
 }
 
 .date {
@@ -8,4 +8,8 @@
 
 .img {
   max-width: 300px;
+}
+
+p {
+  line-height: 2;
 }
