--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   list-style: none;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: #FFFEF6;
   /* border-style: solid; */
   /* border-radius: 1px; */
 }
