--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,9 +11,17 @@
   box-sizing: border-box;
   list-style: none;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  /* font-family: "comicsans"; */
   /* border-style: solid; */
   /* border-radius: 1px; */
 }
+
+h1 {
+  font-size: 2em;
+}
+
+
+
 
 .container {
   width: 800px;
