--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,8 @@
 .footer {
   display: flex;
   justify-content: center;
-  margin-top: 3%;
-  margin-bottom: 3%;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .footer li {
@@ -11,8 +11,4 @@
   display: flex;
   align-items: center;
 
-}
-
-.line {
-  margin-top: 10%;
 }
