--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,4 +1,10 @@
+.homecontent {
+
+  height: 60vh;
+  /* border: black solid 1px; */
+}
+
 .homecontent>* {
-  margin-bottom: 3%;
+  margin-bottom: 25px;
   text-align: center;
 }
