--- a/src/pages/Comments.module.css
+++ b/src/pages/Comments.module.css
@@ -8,9 +8,10 @@
 .form,
 .comment {
   width: 50%;
-  height: 75vh;
-  border: black solid 1px;
+  height: 100%;
+  /* border: black solid 1px; */
   padding: 25px;
+  margin-bottom: 100px;
 }
 
 .form {
@@ -18,6 +19,10 @@
   /* background-color: lightgray; */
   border-radius: 10px;
   height: min-content;
+}
+
+.comment {
+  padding-top: 0;
 }
 
 .comment>* {
@@ -74,6 +79,18 @@
   margin-bottom: 100px;
 }
 
+.forwardBackward {
+  display: flex;
+  /* border: black solid 1px; */
+  justify-content: center;
+  gap: 25px;
+}
+
+.forwardBackwardButton {
+  padding: 0px 5px;
+  height: 30px;
+}
+
 @media screen and (max-width:850px) {
   .container {
     display: flex;
@@ -84,7 +101,9 @@
   .comment,
   .form {
     width: 100%;
+    /* margin-bottom: 0px; */
   }
+
 
 
 }
