--- a/src/components/BlogItem/BlogItem.module.css
+++ b/src/components/BlogItem/BlogItem.module.css
@@ -1,4 +1,29 @@
-.item {
+.item, .legacyitem {
+  /* border:black solid 1px; */
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 }
+.legacyitem a.legacy, .legacyitem{
+  color:gray;
+}
+.row1{
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
+  align-items:center;
+  font-weight:bold;
+}
+.row1>*{
+  width:50%;
+}
+.row2{
+  color:gray;
+}
+.row3{
+  /* border:black solid 1px; */
+}
+.date{
+  display:flex;
+  justify-content:flex-end;
+}
+
