--- a/src/components/ProjectItem/ProjectItem.module.css
+++ b/src/components/ProjectItem/ProjectItem.module.css
@@ -1,4 +1,18 @@
 .item {
   display: flex;
-  justify-content: space-between;
+  flex-direction:column;
+}
+.row1{
+  display:flex;
+  flex-direction:row;
+  align-items:center;
+  font-weight: bold;
+}
+.row1>*{
+  width:50%;
+}
+
+.date{
+  display:flex;
+  justify-content:end;
 }
