--- a/src/pages/Comments.module.css
+++ b/src/pages/Comments.module.css
@@ -36,10 +36,10 @@
 }
 
 
-.slider {
-  width: 100%;
-  height: 30px;
-}
+/* .slider { */
+/*   width: 100%; */
+/*   height: 30px; */
+/* } */
 
 .commentInput {
   resize: none;
