--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,10 +1,17 @@
 .homecontent {
 
-  height: 60vh;
+  height: 100%;
+  width: 100%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
   /* border: black solid 1px; */
 }
 
 .homecontent>* {
   margin-bottom: 25px;
   text-align: center;
+}
+.profile{
+  width: 250px;
 }
