filtering for exposition

--- a/src/components/BlogItem/BlogItem.module.css
+++ b/src/components/BlogItem/BlogItem.module.css
@@ -2,6 +2,8 @@
   /* border:black solid 1px; */
   display: flex;
   flex-direction: column;
+  height:min-content;
+  width:100%;
 }
 .legacyitem a.legacy, .legacyitem{
   color:gray;
