--- a/src/components/Filter.module.css
+++ b/src/components/Filter.module.css
@@ -2,8 +2,32 @@
   width:100%;
   height:100%;
   display:flex;
-  border-radius:15px;
+  flex-direction:column;
+  border-radius:10px;
   background-color: #FFFA84;
   padding:25px;
-
+  gap:25px;
+}
+.filters{
+  width:100%;
+  height: min-content;
+  display:flex;
+  gap:25px;
+  /* border:solid 1px black; */
+  flex-wrap:wrap;
+}
+.filters>*{
+  padding: 5px;
+}
+.input{
+  width:100%;
+  height:30px;
+  padding: 5px;
+  font-size:15px;
+}
+/* .button{ */
+/* } */
+.active{
+  background-color:gray;
+  border-radius:5px;
 }
