--- a/src/pages/Boilerplate.module.css
+++ b/src/pages/Boilerplate.module.css
@@ -1,3 +1,7 @@
+.page{
+  height:100%;
+  width:100%;
+}
 .info {
   color: gray;
 }
@@ -10,5 +14,4 @@
 li {
   list-style-type: disc;
   list-style-position: inside;
-  margin-bottom: 10%;
 }
