lastfm api init

--- a/src/components/LastFMAndPlexStats.module.css
+++ b/src/components/LastFMAndPlexStats.module.css
@@ -1,4 +1,11 @@
 .container{
   height: 100%;
   width: 100%;
+  display:flex;
+  border: black solid 1px;
+}
+.topSongs{
+  display:flex;
+  height:100%;
+  width:100%;
 }
