--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -1,1 +1,12 @@
-
+.gif{
+  width:100%;
+}
+.grid{
+  display:grid;
+  grid-template-columns: auto auto;
+  margin-top:100px;
+}
+.image{
+  display:flex;
+  width:100%;
+}
